extra white space on side  in mobile view fixed

--- a/src/components/HomeScreen.css
+++ b/src/components/HomeScreen.css
@@ -1,3 +1,5 @@
+
 .homescreen{
     background-color: black;
+    overflow-x: hidden;
 }
